[143][omnibox-next] Increase composebox max-height to avoid cutting off suggestions.
(cherry picked from commit 0b3bbc429bfa934a14a4ab6533fb76b3dab52d76)

Bug: 461490811
Fixed: b:460212607
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7159108
Commit-Queue: Teresa Mao <temao@chromium.org>
Cr-Original-Commit-Position: refs/heads/main@{#1545277}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7164702
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7499@{#2203}
Cr-Branched-From: b30439823e5177773584139e72e0593e36863899-refs/heads/main@{#1536371}

--- a/ui/webui/resources/cr_components/composebox/composebox.css
+++ b/ui/webui/resources/cr_components/composebox/composebox.css
@@ -102,7 +102,7 @@
 :host([ntp-realbox-next-enabled]) {
   --cr-composebox-font-size: var(--cr-composebox-custom-font-size, 16px);
   --contextual-entrypoint-and-carousel-context-menu-container-padding-inline-start: 0px;
-  --input-bottom-spacing: 12px;
+  --input-bottom-spacing: var(--cr-composebox-input-bottom-spacing, 12px);
   --text-input-inline-start-spacing: var(--cr-composebox-text-input-inline-start, 18px);
 }
 
@@ -159,7 +159,7 @@ search-animated-glow {
 
 :host([expanding_]) #composebox {
   height: calc-size(auto, size);
-  max-height: 422px;
+  max-height: var(--cr-composebox-max-height, 422px);
   transition-duration: var(--expand-duration);
 }
 
